--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,27 @@
 [tool.poetry]
-name = "megashool-project"
+name = "mafia_qa"
 version = "0.1.0"
 description = ""
-authors = ["Olga Lipina <olga.lipina@tedo.ru>"]
+authors = ["Olga Lipina <neon_alfa@mail.ru>"]
 readme = "README.md"
-packages = [{include = "megashool_project"}]
+packages = [{include = "mafia_qa"}]
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.12"
 langchain = "^0.1.7"
 weaviate-client = "^4.4.4"
+langchain-community = "^0.0.20"
+tiktoken = "^0.6.0"
+langchain-openai = "^0.0.6"
+langchainhub = "^0.1.14"
+chromadb = "^0.4.22"
+docx2txt = "^0.8"
+sentence-transformers = "^2.3.1"
+faiss-cpu = "^1.7.4"
 
+
+[tool.poetry.group.dev.dependencies]
+jupyterlab = "^4.1.1"
 
 [build-system]
 requires = ["poetry-core"]
