--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ chromadb = "^0.4.22"
 docx2txt = "^0.8"
 sentence-transformers = "^2.3.1"
 faiss-cpu = "^1.7.4"
+fastapi = "^0.109.2"
+transformers = "^4.37.2"
 
 
 [tool.poetry.group.dev.dependencies]
