--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,18 +8,30 @@ packages = [{include = "mafia_qa"}]
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.12"
-langchain = "^0.1.7"
+fastapi = "^0.109.2"
+
+[tool.poetry.group.call_qa]
+optional = true
+
+[tool.poetry.group.call_qa.dependencies]
 weaviate-client = "^4.4.4"
-langchain-community = "^0.0.20"
-tiktoken = "^0.6.0"
-langchain-openai = "^0.0.6"
-langchainhub = "^0.1.14"
 chromadb = "^0.4.22"
 docx2txt = "^0.8"
 sentence-transformers = "^2.3.1"
 faiss-cpu = "^1.7.4"
-fastapi = "^0.109.2"
+langchain = "^0.1.7"
+langchain-community = "^0.0.20"
+tiktoken = "^0.6.0"
+langchain-openai = "^0.0.6"
+langchainhub = "^0.1.14"
+
+
+[tool.poetry.group.model]
+optional = true
+
+[tool.poetry.group.model.dependencies]
 transformers = "^4.37.2"
+
 
 
 [tool.poetry.group.dev.dependencies]
