--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "mafia_qa"}]
 python = ">=3.10,<3.12"
 fastapi = "^0.109.2"
 uvicorn = "^0.27.1"
+python-multipart = "^0.0.9"
 
 [tool.poetry.group.call_qa]
 optional = true
@@ -25,6 +26,7 @@ langchain-community = "^0.0.20"
 tiktoken = "^0.6.0"
 langchain-openai = "^0.0.6"
 langchainhub = "^0.1.14"
+python-docx = "^1.1.0"
 
 
 [tool.poetry.group.model]
