--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 EMBEDDINGS_MODEL_NAME='sentence-transformers/distiluse-base-multilingual-cased-v1'
-TOP_K_DOCUMENTS=3
+TOP_K_DOCUMENTS="<NUMBER DOCS TO USE IN CONTEXT>"
 SYSTEM_PROMPT="Ты дружелюбный и исполнительный консультант по правилам спортивной мафии. Отвечай только на вопрос, который тебе задали."
 CONTEXT_PROMPT="Оветь на основе предоставленной выдержки из правил:"
 MODEL_URL="<MODEL_URL>"
-MAX_TOKENS_ANSWER=400
-TEMPERATURE=0
+MAX_TOKENS_ANSWER="<MAX TOKENS TO GENERATE>"
+TEMPERATURE="<MODEL TEMPERATURE FORM 0 TO 1>"
